# ImageProcessor_WebApi

./: .gitignore  README.md
ImageProcessingCPP/: CMakeLists.txt  ImageProcessingCPP.sln  ImageProcessingCPP.vcxproj  ImageProcessingCPP.vcxproj.filters
ImageProcessingCPP/ImageProcessingCPP/: ImageProcessingCPP.cpp  ImageProcessingCPP.h
ImageProcessor_Application/: ImageProcessor_Application.csproj  ServiceExtensions.cs
ImageProcessor_Application/Interfaces/: IImageProcessingService.cs
ImageProcessor_Application/Models/: ImageProcessResult.cs
ImageProcessor_Application/Services/: ImageProcessingService.cs
ImageProcessor_Application/Validators/: FileValidator.cs
ImageProcessor_WebApi/: ImageProcessor_WebApi.csproj  ImageProcessor_WebApi.sln  Program.cs
ImageProcessor_WebApi/Controllers/: ImageProcessingController.cs
ImageProcessor_WebApi/ImageProcessor_Application/Models/: EncodingType.cs
ImageProcessor_WebApi/ImageProcessor_WebApi/: ImageProcessor_WebApi.csproj  ImageProcessor_WebApi.http  Program.cs
ImageProcessor_WebApi/ImageProcessor_WebApi/Controllers/: ImageProcessingController.cs
ImageProcessor_WebApi/Properties/: launchSettings.json
ImageProcessor_WebApi/Wrapper/: Wrapper.vcxproj
Properties/: launchSettings.json
Wrapper/: AssemblyInfo.cpp  Wrapper.cpp  Wrapper.h  Wrapper.vcxproj  Wrapper.vcxproj.filters
